dosyadan türkçe karakterleri kaldırdım

--- a/finaldeneme/corba.html
+++ b/finaldeneme/corba.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="tr">
 <head>
@@ -18,6 +17,7 @@
                     <img src="pngwing.com (1).png" alt="logo" >
                 </a>
                 <ul>
+              
                 <button><li><a href="#sipgit">menü</a></li></button>
                 <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fimformu.html" target="_blank">iletişim</a></li></button>
                 <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
@@ -27,23 +27,21 @@
         </nav>
     </div>
     </header>
-    <!-- home kısmı
-    <section class="home">
-       <div class="content">
-         <h3>eve servis yapılır</h3>
-        <p>restaurantımızda eve teslim hizmeti bulunur</p>
-        <a href="#sipgit" class="btn">sipariş</a>
-    </div>
-    </section>-->
-    <!--menü-->
+    <!--<section class="home">
+        <div class="content">
+          <h3>eve servis yapılır</h3>
+         <p>restaurantımızda eve teslim hizmeti bulunur</p>
+         <a href="#sipgit" class="btn">sipariş</a>
+     </div>
+     </section>-->
     <section class="menü">
-        <h1 id="sipgit" class="heading">hamburgerler</h1>
+        <h1 id="sipgit" class="heading">çorbalar</h1>
         <div class="box-conteiner">
             <div class="box">
                 <div class="box-head">
-                <img src="resim//hamburger.jpg" alt="" width="300em">
-                <h3>sos ve patates eşliginde</h3>
-                <div class="fiyat">49.99tl<span>69.99tl</span></div>
+                <img src="resim//ezogelinçorba.jpg" alt="" width="300em">
+                <h3>mantar çorba</h3>
+                <div class="fiyat">34.99tl<span>39.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
@@ -51,9 +49,9 @@
             </div>
             <div class="box">
                 <div class="box-head">
-                <img src="resim//hamburger1.jpg" alt="" width="300em">
-                <h3>çocuk hamburger menü</h3>
-                <div class="fiyat">39.99tl<span>59.99tl</span></div>
+                <img src="resim//mantarçorbası.jpg" alt="" width="300em">
+                <h3>ezogelin çorba</h3>
+                <div class="fiyat">29.99tl<span>39.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
@@ -61,9 +59,9 @@
             </div>
             <div class="box">
                 <div class="box-head">
-                <img src="resim//hamburger2.jpg" alt="" width="300em">
-                <h3>yumurtalı hamburger</h3>
-                <div class="fiyat">59.99tl<span>79.99tl</span></div>
+                <img src="resim//kabakçorbası.jpg" alt="" width="300em">
+                <h3>kabak çorbası</h3>
+                <div class="fiyat">29.99tl<span>39.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
@@ -71,19 +69,18 @@
             </div>
             <div class="box">
                 <div class="box-head">
-                <img src="resim//hamburger3.jpg" alt="" width="300em">
-                <h3>turşulu soğanlı et burger</h3>
-                <div class="fiyat">79.99tl<span>89.99tl</span></div>
+                <img src="resim//balkabağı.jpg" alt="" width="300em">
+                <h3>balkabağı çorbası</h3>
+                <div class="fiyat">39.99tl<span>49.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
                 </div>
             </div>
         </div>
-    </section>
-
-      <!--footer başlangıç-->
-      <section class="footer">
+    </section> 
+    <!--footer başlangıç-->
+    <section class="footer">
         <div class="paylas">
            <a href="https://tr-tr.facebook.com/MoodysCafe/" class="fab fa-facebook"></a>
            <a href="https://mobile.twitter.com/moodyscafe" class="fab fa-twitter"></a>
@@ -100,5 +97,6 @@
         bizimle çalışmak isterseniz <span>başvuru forumunu</span> doldurunuz
         </div>
     </section>
+    
 </body>
 </html>
