--- a/finaldeneme/makarnatarifi.html
+++ b/finaldeneme/makarnatarifi.html
@@ -129,9 +129,9 @@
        </div> 
        <div class="links"> 
            <a href="#sipgit">menü</a>
-           <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fimformu.html" target="_blank">iletişim</a>
+           <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/iletisimformu.html" target="_blank">iletişim</a>
            <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a>
-           <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ba%C5%9Fvuru.html" 
+           <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/basvuru.html" 
            target="_blank">başvuru</a>
        </div>
         <div class="aciklama">
