--- a/finaldeneme/sandvictarifi.html
+++ b/finaldeneme/sandvictarifi.html
@@ -37,16 +37,18 @@
     </section>-->
     <!--about-->
     <section class="about">
-        <h1 class="heading"> <span>salata tarifimiz</span> </h1>
+        <h1 class="heading"> <span>sandviç tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="resim//soyalısalata.jpg" alt="about" width="500" height="320">
+                <img src="resim//sandviç.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h5>soyalı salata</h5>
-                <p>Marul ve rokayı iyice yıkayın. Kurutulmuş domatesleri şerit şerit doğrayın. Marul ve rokayı da ince doğrayarak tüm malzemeleri karıştırın. 
-                    Sosu için bir kaba soya sosu, roka, susam, zeytinyağı, limon suyu, tuz ve kırmızıbiberi alarak karıştırın. Hazırladığınız sosu salatanın üzerine dökün. 
-                    Üzerine kiraz domatesleri dörde bölerek ekleyin. Servis yapın.
+                <h5>kruvasan sandviç</h5>
+                <p>Kruvasanı iyi bir bıçakla ortadan ikiye bölün.
+                    Tüm malzemeleri incecik dilimleyin.
+                    Kruvasanın bir tarafına krem peynir bir tarafına mayonez sürün.
+                    Malzemeleri sırasıyla fotoğraftaki gibi yerleştirin.
+                    Sandviçi ortadan ikiye keserek servis edin.
                     </p>
                     <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/%C3%B6dev.html" class="btn">ana sayfaya dön</a>
             </div>
@@ -55,55 +57,55 @@
 
      <!--about-->
      <section class="about">
-        <h1 class="heading"> <span>salata tarifimiz</span> </h1>
+        <h1 class="heading"> <span>sandviç tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="resim//salata1.jpg" alt="about" width="500" height="320">
+                <img src="resim//sandviç2.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h5>çoban salata</h5>
+                <h5>avokadolu sandviç</h5>
                 <p>
-                    İlk olarak domatesleri küçük küçük doğrayın ve karıştırma kabına alın.
-                    Daha sonra soğanı da küçük küçük doğrayın ve üzerine tuz serpip elinizle güzelce ovun.
-                    İnce ince doğradığımız yeşil biber ve küçük küçük doğradığımız salatalığımızı da karıştırma kabına alalım.
-                    Son olarak maydanozu da ince ince doğrayalım ve doğradığımız diğer malzemelerimizin üzerine ekleyelim.
-                    Salatamızın zeytin yağını ve limon suyunu da ekledikten sonra güzelce harmanlayalım ve servis tabağına alarak servis edelim. Afiyet olsun.
+                    İlk başta avakadoyu hazırlayalım. Yarım avakadonun içine zeytinyağı, sarımsak, limon ve birazda tuz koyup karıştıralım. 
+                    Ekmeğimize sürelim. Üstüne hindi salamı, kaşar peyniri ve diğer ekmek dilimini koyalım. Ekmek dilimlerini önceden tavada tereyağ ile arkalı önlü kızartabiliriz.
                 </p>
             </div>
         </div>
     </section>
     <section class="about">
-        <h1 class="heading"> <span>salata tarifimiz</span> </h1>
+        <h1 class="heading"> <span>sandviç tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="resim//salata.jpg" alt="about" width="500" height="320">
+                <img src="resim//sandviç3.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h5>yumurtalı salata</h5>
-                <p>Öncelikle yumurtaları 5 dakika kadar haşlıyoruz. Bu arada yeşillikleri sirkeli suda 5 dakika bekletip iyice yıkıyoruz fazla bekletmemeye dikkat edelim vitamini azalmasın.
-                   Tüm yeşillikleri ve yumurtayı ince bir şekilde doğrayıp baharatlar, tuz ve yağ ile karıştırıyoruz. Salatamız hazır. İsterseniz kişi sayısına göre malzemeleri çoğaltıp yapabilirsiniz. Afiyet olsun                                      
-                    </p>
+                <h5>yeşil sandviç</h5>
+                <p>
+                    Avokado, fesleğen ve limon suyunu biraz tuz ve karabiberle küçük bir mutfak robotuna koyun.İstediğiniz kıvama gelene kadar karıştırın.
+                    Avokado karışımını iki dilim ekmeğin üzerine yayın. Karışımın üzerine taze ıspanağı, dilimlenmiş salatalığı ve taze mozarella peynirini yerleştirin.
+                    Diğer dilim ekmekleri de malzemelerin üzerine yerleştirerek sandviçinizi tamamlayın. Ve sandviçiniz servise hazır!
+                </p>
             </div>
         </div>
     </section>
 
     <section class="about">
-        <h1 class="heading"><span>salata tarifimiz</span> </h1>
+        <h1 class="heading"><span>sandviç tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="resim//salata3.jpg" alt="about" width="500" height="320">
+                <img src="resim//sandviç4.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
-                <h5>meyveli salata</h5>
-                <p>Not Ekle
-                    Tarifi Yazdır
-                    Yeşillikler önceden yıkanıp suyu alınır, çok ince olmadan doğranır.
-                    Taze meyvelerin kabukları soyulur çatala gelecek ölçüde dilimlenir.
-                    Kayısı birazcık suda bekletilip dilimlenir.
-                    Bütün malzemeler kat kat genişçe bir servis kabına döşenir ve karıştırılmaz.
-                    Üzerine mısır, nar ve ceviz serpilir.
-                    Sosu için limon, zeytinyağı, nar ekşisi, tuz karıştırılır ve servisten hemen önce salatanın üzerine serpilir,
-                    karıştırmadan servise sunulur.Afiyet olsun                                    
+                <h5>füme sandviç</h5>
+                <p>İlk olarak tüm sebzeleri yıkayıp kurutun.
+                    Ardından domates ve soğanları yuvarlak şekilde doğrayın.
+                    Hellim peynirini 10 dakika suda bekletin. Ardından dilimleyerek kurumasını bekleyin.
+                    Yağsız tavada hellim peynirini önlü arkalı olacak şekilde kızartın.
+                    Hindi fümeleri de aynı şekilde kızartabilirsiniz.
+                    Sandviç ekmeğini enlemesine kesin ve ilk olarak kaşar peynirini yerleştirin.
+                    Üzerine marulu koyun. Ardından hindi jambon ve salamları yerleştirin.
+                    Salamın üzerine hellim peyniri, soğan ve domatesleri dizin.
+                    Sonra tekrar marul yerleştirerek ekmeğinizi kapatın.
+                    Dilerseniz, tost makinesine bastırabilirsiniz. Afiyet olsun.                             
                     </p>
             </div>
         </div>
