--- a/finaldeneme/tarifler.html
+++ b/finaldeneme/tarifler.html
@@ -18,7 +18,7 @@
                 <ul>
              
                 <button><li><a href="#sipgit">menü</a></li></button>
-                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fimformu.html" target="_blank">iletişim</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/iletisimformu.html" target="_blank">iletişim</a></li></button>
                 <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
             </ul>
             <button type="button">tarifler</button>
@@ -43,7 +43,7 @@
                     Çorbanızın kıvamı kullandığınız kabakların büyüklüğüne göre değişebilir.
                     Kıvamı koyu olursa, suyla ayarlayıp pişirin. Birde çorbanızı pişirirken, dibinin tutmaması için ara ara karıştırmayı unutmayın.
                     </p>
-                    <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/%C3%A7orbatarifi.html" class="btn" target="_blank">tarifleri gör</a>
+                    <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/corbatarifi.html" class="btn" target="_blank">tarifleri gör</a>
             </div>
         </div>
 
@@ -66,7 +66,7 @@
             yağ iyice ama iyice kızsın bekleyen soğuyan patatesleri tekrar yağa atın kızarmasına yakın yağa tuz ekleyin.
             İstediğiniz kıvama gelince yağdan alın.
                 </p>
-                    <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/k%C4%B1zartmatarifi.html" target="_blank" class="btn">tarifleri gör</a>
+                    <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/kizartmatarifi.html" target="_blank" class="btn">tarifleri gör</a>
             </div>
         </div>
     </section>
@@ -85,7 +85,7 @@
                     Malzemeleri sırasıyla fotoğraftaki gibi yerleştirin.
                     Sandviçi ortadan ikiye keserek servis edin.
                     </p>
-                    <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/sandvi%C3%A7tarifi.html" target="_blank" class="btn">tarifleri gör</a>
+                    <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/sandvictarifi.html" target="_blank" class="btn">tarifleri gör</a>
             </div>
         </div>
     </section>
@@ -227,7 +227,7 @@ Dondurma, çilekler, toz şeker ve sütü blender’a alalım. Dilerseniz pudra 
 Tüm malzemeler tamamen karışıp, homojen bir kıvam alana kadar blender’ı çalıştıralım.
 Hazır olan çilekli milkshake’i bardaklara paylaştıralım.
                 </p>
-                    <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/tatl%C4%B1tarifi.html" target="_blank" class="btn">tarifleri gör</a>
+                    <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/tatlitarifi.html" target="_blank" class="btn">tarifleri gör</a>
             </div>
         </div>
     </section>
@@ -240,9 +240,9 @@ Hazır olan çilekli milkshake’i bardaklara paylaştıralım.
        </div> 
        <div class="links"> 
            <a href="#sipgit">menü</a>
-           <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fimformu.html" target="_blank">iletişim</a>
+           <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/iletisimformu.html" target="_blank">iletişim</a>
            <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a>
-           <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ba%C5%9Fvuru.html" 
+           <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/basvuru.html" 
            target="_blank">başvuru</a>
        </div>
         <div class="aciklama">
