--- a/finaldeneme/tatli.html
+++ b/finaldeneme/tatli.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="tr">
 <head>
@@ -35,15 +34,15 @@
         <a href="#sipgit" class="btn">sipariş</a>
     </div>
     </section>-->
-    <!--menü-->
+    <!-- menü kısmı-->
     <section class="menü">
-        <h1 id="sipgit" class="heading">hamburgerler</h1>
+        <h1 id="sipgit" class="heading">tatlılar</h1>
         <div class="box-conteiner">
             <div class="box">
                 <div class="box-head">
-                <img src="resim//hamburger.jpg" alt="" width="300em">
-                <h3>sos ve patates eşliginde</h3>
-                <div class="fiyat">49.99tl<span>69.99tl</span></div>
+                <img src="resim//tatlı.jpg" alt="" width="300em">
+                <h3>çilekli milshake</h3>
+                <div class="fiyat">39.99tl<span>49.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
@@ -51,29 +50,29 @@
             </div>
             <div class="box">
                 <div class="box-head">
-                <img src="resim//hamburger1.jpg" alt="" width="300em">
-                <h3>çocuk hamburger menü</h3>
+                <img src="resim//tatlı2.jpg" alt="" width="300em">
+                <h3>çikolatalı pasta</h3>
+                <div class="fiyat">99.99tl<span>109.99tl</span></div>
+                </div>
+                <div class="box-bottom">
+                    <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box-head">
+                <img src="resim//tatlı3.jpg" alt="" width="300em">
+                <h3>çikolatalı browni</h3>
+                <div class="fiyat">49.99tl<span>59.99tl</span></div>
+                </div>
+                <div class="box-bottom">
+                    <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box-head">
+                <img src="resim//tatlı4.jpg" alt="" width="300em">
+                <h3>krem caramel</h3>
                 <div class="fiyat">39.99tl<span>59.99tl</span></div>
-                </div>
-                <div class="box-bottom">
-                    <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
-                </div>
-            </div>
-            <div class="box">
-                <div class="box-head">
-                <img src="resim//hamburger2.jpg" alt="" width="300em">
-                <h3>yumurtalı hamburger</h3>
-                <div class="fiyat">59.99tl<span>79.99tl</span></div>
-                </div>
-                <div class="box-bottom">
-                    <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
-                </div>
-            </div>
-            <div class="box">
-                <div class="box-head">
-                <img src="resim//hamburger3.jpg" alt="" width="300em">
-                <h3>turşulu soğanlı et burger</h3>
-                <div class="fiyat">79.99tl<span>89.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
@@ -81,9 +80,8 @@
             </div>
         </div>
     </section>
-
-      <!--footer başlangıç-->
-      <section class="footer">
+    <!--footer başlangıç-->
+    <section class="footer">
         <div class="paylas">
            <a href="https://tr-tr.facebook.com/MoodysCafe/" class="fab fa-facebook"></a>
            <a href="https://mobile.twitter.com/moodyscafe" class="fab fa-twitter"></a>
@@ -100,5 +98,6 @@
         bizimle çalışmak isterseniz <span>başvuru forumunu</span> doldurunuz
         </div>
     </section>
+
 </body>
 </html>
