--- a/finaldeneme/ödev.html
+++ b/finaldeneme/ödev.html
@@ -20,7 +20,7 @@
             <ul>
             <!-- <button><li><a href="#">home</a></li></button> -->
             <button><li><a href="#sipgit">menü</a></li></button>
-            <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fimformu.html" target="_blank">iletişim</a></li></button>
+            <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/iletisimformu.html" target="_blank">iletişim</a></li></button>
             <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
         </ul>
         <button type="button"><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/tarifler.html" target="_blank">tarifleri gör</a></button>
@@ -94,7 +94,7 @@
                 <div class="fiyat"><marquee behavior="" direction="down" scrollamount="5">39.99tl</marquee><span>49.99tl</span></div>
                 </div>
                 <div class="box-bottom">
-                    <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/%C3%A7orba.html" class="btn">daha fazla gör</a>
+                    <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/corba.html" class="btn">daha fazla gör</a>
                 </div>
             </div>
             
@@ -115,7 +115,7 @@
                     <div class="fiyat"><marquee behavior="" direction="down" scrollamount="5">29.99tl</marquee><span>39.99tl</span></div>
                     </div>
                     <div class="box-bottom">
-                        <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/sandvi%C3%A7.html" class="btn">daha fazla gör</a>
+                        <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/sandvic.html" class="btn">daha fazla gör</a>
                     </div>
                 </div>
             <div class="box">
@@ -125,7 +125,7 @@
                     <div class="fiyat"><marquee behavior="" direction="down" scrollamount="5">19.99tl</marquee><span>29.99tl</span></div>
                     </div>
                     <div class="box-bottom">
-                        <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/k%C4%B1zartmalar.html"  class="btn">daha fazla gör</a>
+                        <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/kizartmalar.html"  class="btn">daha fazla gör</a>
                     </div>
                 </div>
         </div>
@@ -197,7 +197,7 @@
                     <div class="fiyat"><marquee behavior="" direction="down" scrollamount="5">39.99tl</marquee><span>49.99tl</span></div>
                     </div>
                     <div class="box-bottom">
-                        <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/tatl%C4%B1.html"  class="btn">daha fazla gör</a>
+                        <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/tatli.html"  class="btn">daha fazla gör</a>
                     </div>
             </div>
             <div class="box">
@@ -207,7 +207,7 @@
                     <div class="fiyat"><marquee behavior="" direction="down" scrollamount="5">14.99tl</marquee><span>19.99tl</span></div>
                     </div>
                     <div class="box-bottom">
-                        <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/so%C4%9Fuki%C3%A7ecek.html" class="btn">daha fazla gör</a>
+                        <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/sogukicecek.html" class="btn">daha fazla gör</a>
                     </div>
             </div>
             <div class="box">
@@ -227,7 +227,7 @@
                     <div class="fiyat"><marquee behavior="" direction="down" scrollamount="5">19.99tl</marquee><span>29.99tl</span></div>
                     </div>
                     <div class="box-bottom">
-                        <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/%C3%A7aylar.html" class="btn">daha fazla gör</a>
+                        <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/caylar.html" class="btn">daha fazla gör</a>
                     </div>
             </div>
         </div>
@@ -248,9 +248,9 @@
         </div> 
         <div class="links"> 
             <a href="#sipgit">menü</a>
-            <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fimformu.html" target="_blank">iletişim</a>
+            <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/iletisimformu.html" target="_blank">iletişim</a>
             <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a>
-            <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ba%C5%9Fvuru.html" 
+            <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/basvuru.html" 
             target="_blank">başvuru</a>
         </div>
         <div class="aciklama">
