--- a/finaldeneme/caylar.html
+++ b/finaldeneme/caylar.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="tr">
 <head>
@@ -18,6 +17,7 @@
                     <img src="pngwing.com (1).png" alt="logo" >
                 </a>
                 <ul>
+              
                 <button><li><a href="#sipgit">menü</a></li></button>
                 <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fimformu.html" target="_blank">iletişim</a></li></button>
                 <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
@@ -35,15 +35,15 @@
         <a href="#sipgit" class="btn">sipariş</a>
     </div>
     </section>-->
-    <!--menü-->
+    <!-- menü kısmı-->
     <section class="menü">
-        <h1 id="sipgit" class="heading">hamburgerler</h1>
+        <h1 id="sipgit" class="heading">çaylar</h1>
         <div class="box-conteiner">
             <div class="box">
                 <div class="box-head">
-                <img src="resim//hamburger.jpg" alt="" width="300em">
-                <h3>sos ve patates eşliginde</h3>
-                <div class="fiyat">49.99tl<span>69.99tl</span></div>
+                <img src="resim//çay1.jpg" alt="" width="300em">
+                <h3>kızılcık çayı</h3>
+                <div class="fiyat">14.99tl<span>19.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
@@ -51,9 +51,9 @@
             </div>
             <div class="box">
                 <div class="box-head">
-                <img src="resim//hamburger1.jpg" alt="" width="300em">
-                <h3>çocuk hamburger menü</h3>
-                <div class="fiyat">39.99tl<span>59.99tl</span></div>
+                <img src="resim//çay.jpg" alt="" width="300em">
+                <h3>kurutulmuş bitki çayı</h3>
+                <div class="fiyat">14.99tl<span>19.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
@@ -61,9 +61,9 @@
             </div>
             <div class="box">
                 <div class="box-head">
-                <img src="resim//hamburger2.jpg" alt="" width="300em">
-                <h3>yumurtalı hamburger</h3>
-                <div class="fiyat">59.99tl<span>79.99tl</span></div>
+                <img src="resim//çay3.jpg" alt="" width="300em">
+                <h3>papatya çayı</h3>
+                <div class="fiyat">14.99tl<span>19.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
@@ -71,9 +71,9 @@
             </div>
             <div class="box">
                 <div class="box-head">
-                <img src="resim//hamburger3.jpg" alt="" width="300em">
-                <h3>turşulu soğanlı et burger</h3>
-                <div class="fiyat">79.99tl<span>89.99tl</span></div>
+                <img src="resim//çay4.jpg" alt="" width="300em">
+                <h3>lavanta çayı</h3>
+                <div class="fiyat">14.99tl<span>19.99tl</span></div>
                 </div>
                 <div class="box-bottom">
                     <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
@@ -81,9 +81,8 @@
             </div>
         </div>
     </section>
-
-      <!--footer başlangıç-->
-      <section class="footer">
+    <!--footer başlangıç-->
+    <section class="footer">
         <div class="paylas">
            <a href="https://tr-tr.facebook.com/MoodysCafe/" class="fab fa-facebook"></a>
            <a href="https://mobile.twitter.com/moodyscafe" class="fab fa-twitter"></a>
