--- a/finaldeneme/kizartmalar.html
+++ b/finaldeneme/kizartmalar.html
@@ -8,7 +8,6 @@
     <title>restaurant</title>
     <link rel="stylesheet" href="ödev.css">
     <script src="script.js"></script>
-    
 </head>
 <body>
     <header class="header">
@@ -28,62 +27,61 @@
         </nav>
     </div>
     </header>
-    <!-- home kısmı
-   <section class="home">
-       <div class="content">
-         <h3>eve servis yapılır</h3>
-        <p>restaurantımızda eve teslim hizmeti bulunur</p>
-        <a href="#sipgit" class="btn">sipariş</a>
-    </div>
-    </section>-->
-    <!-- menü kısmı-->
-    <section class="menü">
-        <h1 id="sipgit" class="heading">salatalar</h1>
-        <div class="box-conteiner">
-            <div class="box">
-                <div class="box-head">
-                <img src="resim//soyalısalata.jpg" alt="" width="300em">
-                <h3>soya soslu salata</h3>
-                <div class="fiyat">14.99tl<span>19.99tl</span></div>
-                </div>
-                <div class="box-bottom">
-                    <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
-                </div>
-            </div>
-            <div class="box">
-                <div class="box-head">
-                <img src="resim//salata1.jpg" alt="" width="300em">
-                <h3>çoban salata</h3>
-                <div class="fiyat">19.99tl<span>29.99tl</span></div>
-                </div>
-                <div class="box-bottom">
-                    <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
-                </div>
-            </div>
-            <div class="box">
-                <div class="box-head">
-                <img src="resim//salata.jpg" alt="" width="300em">
-                <h3>yumurtalı salata</h3>
-                <div class="fiyat">39.99tl<span>49.99tl</span></div>
-                </div>
-                <div class="box-bottom">
-                    <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
-                </div>
-            </div>
-            <div class="box">
-                <div class="box-head">
-                <img src="resim//salata3.jpg" alt="" width="300em">
-                <h3>meyveli salata</h3>
-                <div class="fiyat">39.99tl<span>59.99tl</span></div>
-                </div>
-                <div class="box-bottom">
-                    <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--footer başlangıç-->
-    <section class="footer">
+    <!--<section class="home">
+        <div class="content">
+          <h3>eve servis yapılır</h3>
+         <p>restaurantımızda eve teslim hizmeti bulunur</p>
+         <a href="#sipgit" class="btn">sipariş</a>
+     </div>
+     </section>-->
+     <!-- menü kısmı-->
+     <section class="menü">
+         <h1 id="sipgit" class="heading">kızartmalar</h1>
+         <div class="box-conteiner">
+             <div class="box">
+                 <div class="box-head">
+                 <img src="resim//patates.jpg" alt="" width="300em">
+                 <h3>patates kızartması</h3>
+                 <div class="fiyat">19.99tl<span>29.99tl</span></div>
+                 </div>
+                 <div class="box-bottom">
+                     <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
+                 </div>
+             </div>
+             <div class="box">
+                 <div class="box-head">
+                 <img src="resim//soğan.jpg" alt="" width="300em">
+                 <h3>8'li soğan halkası</h3>
+                 <div class="fiyat">14.99tl<span>19.99tl</span></div>
+                 </div>
+                 <div class="box-bottom">
+                     <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
+                 </div>
+             </div>
+             <div class="box">
+                 <div class="box-head">
+                 <img src="resim//karides.jpg" alt="" width="300em">
+                 <h3>4 çıtır karides</h3>
+                 <div class="fiyat">24.99tl<span>39.99tl</span></div>
+                 </div>
+                 <div class="box-bottom">
+                     <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
+                 </div>
+             </div>
+             <div class="box">
+                 <div class="box-head">
+                 <img src="resim//tavuk.jpg" alt="" width="300em">
+                 <h3>2 çıtır göğüs</h3>
+                 <div class="fiyat">49.99tl<span>59.99tl</span></div>
+                 </div>
+                 <div class="box-bottom">
+                     <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
+                 </div>
+             </div>
+         </div>
+     </section>
+     <!--footer başlangıç-->
+     <section class="footer">
         <div class="paylas">
            <a href="https://tr-tr.facebook.com/MoodysCafe/" class="fab fa-facebook"></a>
            <a href="https://mobile.twitter.com/moodyscafe" class="fab fa-twitter"></a>
