--- a/finaldeneme/anayemektarifleri.html
+++ b/finaldeneme/anayemektarifleri.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>restaurant</title>
-    <link rel="stylesheet" href="ödev.css">
+    <link rel="stylesheet" href="odev.css">
 </head>
 <body>
     <header class="header">
@@ -18,7 +18,7 @@
                 <ul>
                 
                 <button><li><a href="#sipgit">menü</a></li></button>
-                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fimformu.html" target="_blank">iletişim</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/iletisimformu.html" target="_blank">iletişim</a></li></button>
                 <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
             </ul>
             <button type="button">tarifler</button>
@@ -52,7 +52,7 @@ Sosa isteğe göre susam yağı, oyster sos da eklenebilir ve farklı baharatlar
 Sos ağdalaşıncaya kadar çektirilerek pişirilir. Bonfileler istenilen pişme derecesine göre yüksek ateşte iki yüzü de pişirilir ve dilimlenir.
 Son aşamada ıspanaklar ve sos ve biberler ile birleştirilir. Ispanakların ölmemesine dikkat edilmelidir. Son bir kez daha ocakta sotelenir ve servis edilir. 
                 </p>
-                <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/%C3%B6dev.html" class="btn">ana sayfaya dön</a>
+                <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/odev.html" class="btn">ana sayfaya dön</a>
             </div>
         </div>
     </section>
