--- a/finaldeneme/hamburger.html
+++ b/finaldeneme/hamburger.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>restaurant</title>
-    <link rel="stylesheet" href="ödev.css">
+    <link rel="stylesheet" href="odev.css">
     <script src="script.js"></script>
 </head>
 <body>
@@ -19,7 +19,7 @@
                 </a>
                 <ul>
                 <button><li><a href="#sipgit">menü</a></li></button>
-                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fimformu.html" target="_blank">iletişim</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/iletisimformu.html" target="_blank">iletişim</a></li></button>
                 <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
             </ul>
             <button type="button">tarifler</button>
